# rjson

./: ALTERNATIVES_TO_PYO3_RESEARCH.md  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  Cargo.toml  ENHANCED_ARCHITECTURE_PLAN.md  FINAL_RESULTS.md  HYBRID_FFI_OPTIMIZATION.md  HYBRID_OPTIMIZATION_INVESTIGATION.md  MULTI_PYTHON_BENCHMARK.md  Makefile  NUCLEAR_OPTION_FAILURE.md  OPTIMIZATION_JOURNEY.md  OPTIMIZATION_QUICKSTART.md  ORJSON_GAP_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_ROADMAP.md  PHASE1.5_RESULTS.md  PHASE1_RESULTS.md  PHASE2_ANALYSIS.md  PHASE2_RESULTS.md  PHASE3_FINAL_RESULTS.md  PHASE3_STRATEGY.md  PHASE4A_LEARNINGS.md  PHASE5_LEARNINGS.md  PHASE6A_PLUS_INVESTIGATION.md  PHASE6A_RESULTS.md  PHASE6A_SUMMARY.md  PR_SUMMARY.md  README.md  RELEASE_READY.md  REMAINING_GAPS_INVESTIGATION.md  RUST_EXPERT_ARCHITECTURE_PROPOSAL.md  RUST_EXPERT_REVIEW.md  STRING_OPTIMIZATION_INVESTIGATION.md  pyproject.toml
.cargo/: config.toml
.github/instructions/: leader.instructions.md  python-enginner.instructions.md  rust-engineer.instructions.md
benches/: bulk_benchmark.py  comprehensive_benchmark.py  extreme_benchmark.py  large_benchmark.py  memory_benchmark.py  profile_overhead.py  python_benchmark.py
python/rjson/: __init__.py
scripts/: run_tests.sh
src/: lib.rs  lib_backup.rs
src/optimizations/: buffer_pool.rs  bulk.rs  custom_parser.rs  dict_direct.rs  dict_key_fast.rs  escape_lut.rs  extreme.rs  mod.rs  object_cache.rs  pyfloat_fast.rs  pylong_fast.rs  raw_parser.rs  raw_serialize.rs  simd_escape.rs  simd_parser.rs  type_cache.rs
tests/: test_rjson.py
