[package]
name = "rjson"
version = "0.1.0"
edition = "2021"

[lib]
name = "rjson"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.24.0", features = ["tokio-runtime"] }
tokio = "1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[profile.release]
debug = true       # Debug symbols for our profiler.
lto = true         # Link-time optimization.
codegen-units = 1  # Slower compilation but faster code.
