[package]
name = "rjson"
version = "0.1.0"
edition = "2021"

[lib]
name = "rjson"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.14"   # SIMD-accelerated JSON parsing (Phase 7)
itoa = "1.0"
ryu = "1.0"
memchr = "2.7"
fast-float = "0.2"   # 4x faster float parsing than stdlib
ahash = "0.8"        # 2x faster hashing than default HashMap
smallvec = "1.13"    # Stack-allocated small vectors

[profile.release]
debug = true         # Debug symbols for our profiler.
lto = "fat"          # Aggressive link-time optimization.
codegen-units = 1    # Slower compilation but faster code.
panic = "abort"      # Smaller binary, no unwinding overhead.
opt-level = 3        # Maximum optimization.

[profile.release.build-override]
opt-level = 3        # Optimize build scripts too.
