[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rjson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
]

[tool.maturin]
features = ["pyo3/extension-module"]
compatibility = "linux"

[dependency-groups]
dev = [
    "maturin>=1.8.6",
    "orjson>=3.9.7",
]
